# ugc_sprint_1

./: .pre-commit-config.yaml  docker-compose.yml  env.example  env.template  pyproject.toml
app/: env.template
app/fastapi_app/: constants.py  exeptions.py  main.py
app/fastapi_app/api/: api_router.py
app/fastapi_app/api/v1/: v1_router.py
app/fastapi_app/api/v1/metrics/: metrics_router.py
app/fastapi_app/schemas/api/v1/: schemas.py
app/fastapi_app/schemas/services/: metric_schemas.py
app/fastapi_app/services/: kafka_producer.py
app/fastapi_app/services/auth/: auth_service.py
app/fastapi_app/services/metrics/: metric_service.py
app/fastapi_app/services/repositories/kafka/: producers.py
app/fastapi_app/settings/: config.py  logs.py
app/kafka/: Dockerfile
app/kafka/producers/: kafka_producer.py
nginx/: fastapi_app.conf
