[tool.poetry]
name = "ugc-sprint-1"
version = "1.0.0"
description = ""
authors = ["Носов Сергей Олегович <SONosov@datafort.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
unicorn = "^2.0.1.post1"
gunicorn = "^23.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
faststream = {extras = ["kafka"], version = "^0.5.18"}
clickhouse-driver = "^0.2.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-randomly = "^3.15.0"
pytest-icdiff = "^0.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
bandit = "^1.7.9"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
